force-app/main/default/objects/Work_Order__c/fields/Amount_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Work__c</fullName>
    <description>In Unit of Works</description>
    <label>Amount of Work</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>