force-app/main/default/objects/Work_Order__c/fields/Fine_per_hour_delay__c.field-meta.xml
<CustomField>
    <fullName>Fine_per_hour_delay__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Fine per 1h delay of WO to be completed</description>
    <label>Fine per hour delay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>