force-app/main/default/objects/Work_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount_of_Work__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Fine_per_hour_delay__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>